# roblox-py

./: .gitignore  LICENSE  README.md  helper.py  pyproject.toml
.github/workflows/: codeql-analysis.yml
src/content/images/: roblox-py-layered.pdn
src/roblox_py/: helper_module.lua  main.py  ropy_module.lua
src/roblox_py/cmdlet/: setcmdlet.py
src/roblox_py/transpiler/: ropy_module.py  scope.py  transpiler.py
src/roblox_py/transpiler/analysis/: build_lua_ast.py  python_scope.py
src/roblox_py/transpiler/compile/: compile_from_ast.py
src/roblox_py/transpiler/lua_ast/: lua_ast_nodes.py  lua_scope.py
src/roblox_py/util/: strings.py  transpilation.py
